fixed z-index on modal backdrop; wasn't hiding navbar

--- a/src/components/UI/ImageModal.module.css
+++ b/src/components/UI/ImageModal.module.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    z-index: 1;
+    z-index: 2;
     background: rgba(0, 0, 0, 0.75);
 }
 
